test(api): adjust error handling tests; add BindException handler; standardize ProblemDetail fields and priorities
refactor(security): enrich 401/403 ProblemDetail with path/method/timestamp/traceId
chore(admin): remove unused admin/users test target; keep only /stats
chore: minor message and swagger example updates
build: tidy build.gradle groups with inline versions

--- a/src/main/resources/static/admin-users.html
+++ b/src/main/resources/static/admin-users.html
@@ -30,7 +30,8 @@
             <div class="row mb-4">
                 <div class="col-md-8">
                     <div class="input-group">
-                        <input aria-label="사용자 검색" class="form-control" id="search-input" placeholder="사용자명 또는 이메일로 검색..."
+                        <input aria-label="사용자 검색" class="form-control" id="search-input"
+                               placeholder="사용자명 또는 이메일로 검색..."
                                type="text">
                         <button class="btn btn-outline-secondary" onclick="searchUsers()" type="button">
                             <i class="bi bi-search"></i> 검색
