--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -47,7 +47,8 @@
 
                         <div class="mb-3">
                             <label class="form-label" for="passwordConfirm">비밀번호 확인</label>
-                            <input autocomplete="new-password" class="form-control" id="passwordConfirm" name="passwordConfirm"
+                            <input autocomplete="new-password" class="form-control" id="passwordConfirm"
+                                   name="passwordConfirm"
                                    placeholder="비밀번호를 다시 입력하세요" required type="password">
                         </div>
 
@@ -59,7 +60,8 @@
 
                         <div class="mb-4">
                             <label class="form-label" for="email">이메일</label>
-                            <input autocomplete="email" class="form-control" id="email" name="email" placeholder="이메일을 입력하세요"
+                            <input autocomplete="email" class="form-control" id="email" name="email"
+                                   placeholder="이메일을 입력하세요"
                                    required type="email">
                         </div>
 
