--- a/src/main/resources/static/my-page.html
+++ b/src/main/resources/static/my-page.html
@@ -67,7 +67,8 @@
 
                         <div class="col-12">
                             <label class="form-label" for="lastLoginDate">마지막 로그인</label>
-                            <input aria-describedby="lastLoginDate-help" class="form-control" id="lastLoginDate" readonly
+                            <input aria-describedby="lastLoginDate-help" class="form-control" id="lastLoginDate"
+                                   readonly
                                    type="text">
                             <div class="form-text" id="lastLoginDate-help">마지막으로 로그인한 날짜와 시간입니다.</div>
                         </div>
