--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,6 +31,18 @@
                         <a class="btn btn-primary btn-lg" href="login.html">로그인하기</a>
                         <a class="btn btn-outline-secondary" href="signup.html">회원가입</a>
                     </div>
+
+                    <hr class="my-4">
+                    
+                    <div class="d-grid gap-2">
+                        <a class="btn btn-success btn-lg" href="/swagger-ui/index.html" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-code-slash me-2" viewBox="0 0 16 16" style="vertical-align: text-bottom;">
+                                <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z"/>
+                            </svg>
+                            API 문서 (Swagger)
+                        </a>
+                        <small class="text-muted">개발자를 위한 REST API 문서</small>
+                    </div>
                 </div>
                 <div class="card-footer text-center">
                     <small class="text-muted">© 2024 Board Hole. All rights reserved.</small>
